use sshj lib for better SSH key support (including ed25519); improve ssh-agent interactions